fixed issue with printing

--- a/static/temp.tex
+++ b/static/temp.tex
@@ -33,23 +33,23 @@ ZLECENIE WYKONANIA PRAC lub DOKONANIA ZAKUPU
 \hline
 {\scriptsize \textbf{Komórka zlecająca:}}\newline
 \newline
-%s \newline
+abc \newline
 & {\scriptsize \textbf{Adresat:}}\newline
 \newline
-%s \newline 
+abc \newline 
 & {\scriptsize \textbf{Data wystawienia zlecenia:}}\newline
 \newline
-%s \newline
+abc \newline
 & {\scriptsize \textbf{Data przyjęcia zlecenia:}}\newline
 \newline
-%s \newline
+abc \newline
 \\ \hline
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{|X|}
 {\footnotesize \textbf{Treść zlecenia:}}\newline
 
-%s
+abc
 \newline
 \\
 \end{tabularx}
@@ -58,7 +58,7 @@ ZLECENIE WYKONANIA PRAC lub DOKONANIA ZAKUPU
 \begin{tabularx}{\linewidth}{|X|}
 {\footnotesize \textbf{Uzasadnienie potrzeby realizacji zlecenia:}}\newline
 
-%s
+abc
 \newline 
 \\
 \end{tabularx}
@@ -84,7 +84,7 @@ WYPEŁNIA KOMÓRKA REALIZUJĄCA ZLECENIE:
 \hline
 {\footnotesize \textbf{Opis wykonanych prac lub wniosek o zakup:}}\newline
 
-%s 
+abc 
 
 \\
 \end{tabularx}
@@ -93,12 +93,12 @@ WYPEŁNIA KOMÓRKA REALIZUJĄCA ZLECENIE:
 \hline
 {\footnotesize \textbf{Data i podpis osoby wnioskującej o zakup}} \newline
 
-%s \hspace{1cm} .....................................
+abc \hspace{1cm} .....................................
 
 &
 {\footnotesize \textbf{Data i podpis osoby wykonującej zlecenie}} \newline
 
-%s \hspace{1cm} .....................................
+abc \hspace{1cm} .....................................
 
 
 \end{tabularx}
@@ -110,7 +110,7 @@ WYPEŁNIA KOMÓRKA REALIZUJĄCA ZLECENIE:
 
 {\footnotesize \textbf{Uzasadnienie zakupu}}\newline
 
-%s  
+abc  
 
 \end{tabularx}
 
@@ -119,7 +119,7 @@ WYPEŁNIA KOMÓRKA REALIZUJĄCA ZLECENIE:
 &  
 {\footnotesize \textbf{Akceptacja Dyrektora lub osoby upoważnionej}}\newline
 
-%s \hspace{1cm} .....................................
+abc \hspace{1cm} .....................................
 
 
 \\ 
@@ -132,13 +132,13 @@ WYPEŁNIA KOMÓRKA REALIZUJĄCA ZLECENIE:
 \hline
 {\footnotesize \textbf{Zakończenie zlecenia}}\newline
 
-%s \hspace{1cm} ..................................... \newline
+abc \hspace{1cm} ..................................... \newline
 
 {\scriptsize Data i podpis Kierownika komórki wystawiającej zlecenie }
 &
 {\footnotesize \textbf{Potwierdzenie wykonania zlecenia*}}\newline
 
-%s \hspace{1cm} ..................................... \newline
+abc \hspace{1cm} ..................................... \newline
 
 {\scriptsize Data i podpis Kierownika komórki wystawiającej zlecenie }
 \\ \hline
