--- a/doc/dokumentacja.tex
+++ b/doc/dokumentacja.tex
@@ -317,7 +317,8 @@ Po aktualizacji i ponownym podłączeniu do sieci lokalnej należy zresetować V
 TODO!!!
 \end{center}
 \subsubsection{Pobieranie obrazu VM}
-Obraz serwera do importu można pobrać z \url{https://jeszcze.brak}
+Obraz serwera do importu można pobrać z:\\
+ \url{https://drive.google.com/open?id=0B8ey2GDfV593LUFtU1dpUXh2NDQ}
 
 \newpage
 \section{Ostatnie zmiany}
