--- a/doc/dokumentacja.tex
+++ b/doc/dokumentacja.tex
@@ -336,7 +336,15 @@ Obraz serwera do importu można pobrać z:\\
 \newpage
 \section{Ostatnie zmiany}
 \begin{itemize}
-\item v1.7\\ 
+\item v1.7b1\\
+03.10.17
+\begin{itemize}
+\item dodano możliwość pobierania dokumentacji z poziomu opcji
+\item dodano informacje kontaktowe i stopke strony 
+\item zbindowano adres "/"
+\item zmieniono aktualności i usunięto problem z znakami dialektycznymi 
+\end{itemize}
+\item v1.7b\\ 
 20.09.17
 \begin{itemize}
 \item aktualizacja dokumentacji (aktualizacja)
